--- a/2022/rps/index.css
+++ b/2022/rps/index.css
@@ -1,3 +1,17 @@
+#game {
+	display: none;
+}
+
+.text {
+	margin-bottom: 1em;
+}
+
+input {
+	width: 100%;
+	height: 40px;
+	font-size: 1em;
+}
+
 img {
 	border: 1px solid #f9f9f9;
 }
