--- a/2022/rps/index.css
+++ b/2022/rps/index.css
@@ -2,7 +2,11 @@
 	display: none;
 }
 
-.text {
+#results {
+	display: none;
+}
+
+p {
 	margin-bottom: 1em;
 }
 
@@ -14,6 +18,7 @@ input {
 
 img {
 	border: 1px solid #f9f9f9;
+	width: 150px;
 }
 
 img:hover {
