--- a/2022/rps/index.css
+++ b/2022/rps/index.css
@@ -17,11 +17,14 @@ input {
 }
 
 img {
-	border: 1px solid #f9f9f9;
 	width: 150px;
 }
 
-img:hover {
+#play img {
+	border: 1px solid #f9f9f9;
+}
+
+#play img:hover {
 	border: 1px solid #4a4a4a;
 	background: #dcdcdc;
 }
