--- a/2022/storytelling/text.css
+++ b/2022/storytelling/text.css
@@ -1,37 +1,46 @@
-#t2-1, #t2-2 {
+/* True route init */
+#b2-2 {
+	background-color: maroon;
+	border: 1px solid maroon;
+	display: none;
+}
+
+/* Phone screen */
+#t3-1, #t3-2 {
 	text-align: center;
 	background-color: black;
 	color: white;
 	padding-bottom: 0.7em;
 	margin-bottom: 1em;
 }
-
-#t2-2 {
+#t3-2 {
 	padding-top: 0.7em;
 }
-
-#t2-1-1 {
+#t3-1-1 {
 	color: orange;
 	font-size: 2em;
 	margin: 0;
 }
-
-#t2-1-2 {
+#t3-1-2 {
+	margin: 0;
+}
+#t3-2-4 {
 	margin: 0;
 }
 
-#t2-2-1 {
+/* d1: Nicholas dialogue */
+blockquote.d1 > span {
+	font-weight: bold;
+}
+
+.purple {
 	color: #d94fff;
 }
 
-#t2-2-2 {
+.red {
 	color: red;
 }
 
-#t2-2-3 {
+.pink {
 	color: #ff4fd9;
-}
-
-#t2-2-4 {
-	margin: 0;
 }
