--- a/2022/storytelling/dialogue.css
+++ b/2022/storytelling/dialogue.css
@@ -3,6 +3,7 @@ blockquote > span {
 }
 
 /* Bus stop stranger dialogue */
+/* Uber driver dialogue */
 blockquote.d2 {
 	border-left-color: maroon;
 }
