taking the day off

--- a/2022/storytelling/text.css
+++ b/2022/storytelling/text.css
@@ -68,3 +68,10 @@
 	padding: 0.01em;
 	margin-bottom: 1em;
 }
+
+#t4-3-1 {
+	background-color: #0F9D58;
+	color: white;
+	padding: 1em;
+	margin-bottom: 1em;
+}
