work after riding uber

--- a/2022/storytelling/text.css
+++ b/2022/storytelling/text.css
@@ -79,3 +79,17 @@
 	padding: 1em;
 	margin-bottom: 1em;
 }
+
+.t5-2-1 {
+	background-color: #f4f4f4;
+	padding: 0.5em;
+	margin-bottom: 1em;
+}
+
+#t5-2-2 {
+	margin-bottom: 1em;
+}
+
+#t5-2-3 {
+	margin-bottom: 0;
+}
