--- a/2022/storytelling/text.css
+++ b/2022/storytelling/text.css
@@ -3,7 +3,7 @@
 }
 
 /* Phone screen */
-.t3-1, #t3-2, #t7-2 {
+#t3-1, #t3-2, #t7-2 {
 	text-align: center;
 	background-color: black;
 	color: white;
