--- a/2022/treadmill/main.css
+++ b/2022/treadmill/main.css
@@ -19,7 +19,7 @@ body {
 }
 
 #progress {
-	margin: auto;
+	margin: 1em auto auto auto;
 	width: 70%;
 	background: rgba(0, 0, 0, 0);
 	border: 3px solid var(--fg);
